CSS Fix , Buildtag now shifts with sidebar

--- a/css/slate.css
+++ b/css/slate.css
@@ -232,7 +232,7 @@ body{
 .buildtag{
 position:fixed;
 bottom:30px;
-right:5px;
+right:130px;
 text-align:right;
 color:white;
 font-weight: bold;
